[gd_scene load_steps=4 format=3 uid="uid://difgaawhpyo0r"]

[ext_resource type="Script" uid="uid://c613v451tucd0" path="res://scenes/ui/skill_tree/skill_tree_root.gd" id="1_6goge"]
[ext_resource type="PackedScene" uid="uid://bvf8uqbc214c3" path="res://scenes/ui/skill_tree0.tscn" id="2_bsd3t"]
[ext_resource type="PackedScene" uid="uid://sgxxofrggjed" path="res://scenes/ui/skill_info_panel.tscn" id="3_ycu7t"]

[node name="SkillTreeRoot" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6goge")

[node name="SkillTreeButtonGroup" parent="." instance=ExtResource("2_bsd3t")]
z_index = 1
layout_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
show_behind_parent = true
custom_minimum_size = Vector2(3200, 1800)
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2

[node name="CanvasLayer_SkillPanel" type="CanvasLayer" parent="."]
layer = 11

[node name="SkillInfoPanel" parent="CanvasLayer_SkillPanel" instance=ExtResource("3_ycu7t")]
visible = false
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 872.296
offset_top = 52.0
offset_right = 1268.0
offset_bottom = 668.0
